[gd_scene load_steps=2 format=3 uid="uid://c9x8y7z6a5b4c3d2"]

[ext_resource type="Script" path="res://Scripts/UI/TestPassiveWindow.gd" id="1_1me3q"]

[node name="TestPassiveWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1me3q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Тест системы пассивных способностей"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LearnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Изучить пассивные способности"

[node name="ShowPassivesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Показать окно пассивок"

[node name="TestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Тест активации/деактивации"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Закрыть"
